[package]
name = "rust-hello"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
indicatif = "0.17"
rayon = "1.10"
crossbeam = "0.8"
dashmap = "5.5"
lazy_static = "1.4"
regex = "1.10"
url = "2.5"
ipnetwork = "0.20"
maxminddb = "0.24"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"


# HTTP 客户端和代理支持
hyper = { version = "1.0", features = ["client", "http1", "http2", "server"] }
hyper-tls = "0.6"
hyper-proxy = "0.9"
hyper-util = { version = "0.1", features = ["client"] }
base64 = "0.22"
urlencoding = "2.1"

[profile.dev]
incremental = true  # 开启 debug 模式增量编译
overflow-checks = false  # 关闭溢出检查（仅开发环境，生产环境需开启）

[profile.release]
incremental = true  # 可选：开启 release 模式增量编译
